--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,7 +1,3 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-
 /*
 
 @font-face {
@@ -29,6 +25,17 @@
 }
 */
 
+html,
+body {
+  min-height: 100%;
+}
+
+html,
+body,
+#__next {
+  height: 100%;
+}
+
 :root {
   --foreground-rgb: 0, 0, 0;
   --background-start-rgb: 214, 219, 220;
@@ -48,6 +55,7 @@ body {
   background: linear-gradient(to bottom, transparent, rgb(var(--background-end-rgb))) rgb(var(--background-start-rgb));
 }
 
+/*
 @layer base {
   body {
     @apply text-white;
@@ -67,3 +75,4 @@ body {
     @apply opacity-100 transition ease-in-out hover:opacity-75;
   }
 }
+*/
